PROD-9-26-19/force-app/main/default/objects/Campaign_Member_History__c/fields/Campaign_Member_Link__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Link__c</fullName>
    <formula>HYPERLINK( &#39;https://na27.salesforce.com/&#39;&amp;Campaign_Member_SFDC_Id__c ,   Contact__r.FirstName&amp;&#39; &#39;&amp;Contact__r.LastName  , &#39;_top&#39;)</formula>
    <label>Campaign Member Link</label>
    <type>Text</type>
</CustomField>