PROD-9-26-19/force-app/main/default/objects/Campaign_Member_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Members History</relationshipLabel>
    <relationshipName>Campaign_Members_History</relationshipName>
    <type>Lookup</type>
</CustomField>