PROD-9-26-19/force-app/main/default/objects/Campaign_Member_History__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>