PROD-9-26-19/force-app/main/default/objects/Campaign_Member_History__c/fields/Record_Modified_by__c.field-meta.xml
<CustomField>
    <fullName>Record_Modified_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Modified by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members_History</relationshipName>
    <type>Lookup</type>
</CustomField>